[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruyiPage"
version = "1.1.2"
description = "专用于 AI 分析和数据采集场景，可拦截任意请求响应包的 Firefox 自动化库。"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = "BSD-3-Clause"
authors = [
  { name = "ruyiPage" }
]
keywords = [
  "firefox",
  "webdriver-bidi",
  "browser-automation",
  "automation",
  "bidi"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
  "websocket-client>=1.0",
]

[project.urls]
Homepage = "https://github.com/LoseNine/ruyipage"
Repository = "https://github.com/LoseNine/ruyipage"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ruyipage*"]
exclude = ["examples*", "dist*", "build*", "tests*"]
